# cpacs_tigl_gen

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/driver/: main.cpp
src/lib/: CodeGen.cpp  Filesystem.cpp  Filesystem.h  SchemaParser.cpp  Tables.cpp  Tables.h  TypeSystem.cpp  TypeSystem.h  Variant.hpp
src/lib/runtime/: TixiHelper.h
test/: main.cpp  utils.cpp  utils.h
test/data/sequence/: ref.cpp
